Fixed ul.wide layout issue

--- a/layouts/default/global.css
+++ b/layouts/default/global.css
@@ -94,7 +94,7 @@ p, ul, ol, dl, blockquote {
 	max-width: 100%;
 }
     
-ul { list-style-type: disc; margin-left: 1.618em; }
+ul { list-style-type: disc; margin-left: 1.618em; margin-right: 1.618em; }
 ol { list-style-type: decimal; margin-left: 1.618em; }
 nav ul, nav ol { list-style: none; margin: 0; padding: 0;}
 
